[gd_scene load_steps=8 format=3 uid="uid://bjd1nqxjjfm2o"]

[ext_resource type="Texture2D" uid="uid://sxxfbe4kp875" path="res://icon.svg" id="1_1lu1b"]
[ext_resource type="Script" uid="uid://dgkyjtah7j1l8" path="res://Scenes/CharacterScenes/Enemies/TurretEnemy/TurretEnemy.gd" id="1_2nbbg"]
[ext_resource type="Script" uid="uid://det2m5ovvx6m2" path="res://Scenes/CharacterScenes/Components/DamageComponent.gd" id="3_2nbbg"]
[ext_resource type="Script" uid="uid://db1u55c24i38l" path="res://Classes/StateMachine/state_machine.gd" id="3_auu8x"]
[ext_resource type="Script" uid="uid://cwgbwgscmg45p" path="res://Scenes/CharacterScenes/Enemies/States/Searching.gd" id="6_2nbbg"]
[ext_resource type="Script" uid="uid://dhjdi07fycq1y" path="res://Scenes/CharacterScenes/Enemies/States/Damaging.gd" id="6_w5s3i"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1lu1b"]
size = Vector3(1.30493, 1.28442, 0.328735)

[node name="TurretEnemy" type="StaticBody3D"]
script = ExtResource("1_2nbbg")
DetectionRange = 9.0
AttackRange = 8.5

[node name="Sprite3D" type="Sprite3D" parent="."]
texture = ExtResource("1_1lu1b")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00354004, -0.00695801, -0.003479)
shape = SubResource("BoxShape3D_1lu1b")

[node name="DamageComponent" type="Node" parent="."]
script = ExtResource("3_2nbbg")
IsRangeAttack = true

[node name="DebugLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25835, 0)
text = "Turret"
font_size = 96

[node name="PlayerDetection" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -10)
collision_mask = 3
debug_shape_custom_color = Color(0.992157, 0, 0, 1)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("Parent", "InitialState")]
script = ExtResource("3_auu8x")
Active = true
Parent = NodePath("..")
InitialState = NodePath("Searching")

[node name="Searching" type="Node" parent="StateMachine" node_paths=PackedStringArray("Damaging")]
script = ExtResource("6_2nbbg")
Damaging = NodePath("../Damaging")

[node name="Damaging" type="Node" parent="StateMachine"]
script = ExtResource("6_w5s3i")

[node name="DamageCooldownTimer" type="Timer" parent="StateMachine/Damaging"]

[connection signal="timeout" from="StateMachine/Damaging/DamageCooldownTimer" to="StateMachine/Damaging" method="_on_damage_cooldown_timer_timeout"]
